data/derived/comb/progs/unify/prog7509.ml.out
Characters 67-69:
  let fixpoint (f,b) = wwhile((let f' b = ( (f b), (f b) not = b) in f'), b);;
                                                                     ^^
Error: This expression has type 'a -> ((bool -> bool) -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside (bool -> bool) -> 'a
